--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <title>Booksky</title>
+  <title>Booksky</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="icon" href="download.png">
   <link rel="stylesheet" href="style.css">
- 
+  
 </head>
 <body>
-    <div id="div1">
-    <h1 id="h1">Booksky</h1>
+  <div id="title">
+    <h1>Booksky</h1>
+  </div>
+  <div class="container">
+    <div class="samp">
+      <h2 style=" color: rgba(255, 80, 80);">Rich Dad poor Dad</h2>
+      <h4>Robert</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, cumque? Adipisci, beatae consequuntur? Ab animi alias iusto veniam maiores soluta nisi velit laudantium. Soluta reprehenderit molestias numquam cupiditate expedita, earum nemo libero porro ipsum at?</p>
+      <button id="outdel" onclick="del(event)">delete</button>
     </div>
-    <div id="container">
-      <div id="div2">
-        <h2 style="color: coral;">Rich Dad Poor Dad</h2>
-        <h4>Robert</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti eveniet cumque ut, ea dolores earum voluptate, odit consequatur iure ratione consectetur voluptatum praesentium vitae qui?</p>
-        <button id="btn1" onclick="del(event)">Delete</button>
-      </div>
-      
-    </div>
-      <div id="overlay">
-
-      </div>
-      <div id="popup">
-        <center>
-        <h2>Add New Book</h2>
-        <form>
-        <input id="input1" placeholder="Book Title" ><br>
-        <input id="input2" placeholder="Book Author" ><br>
-        <textarea id="input3" placeholder="Short Description" ></textarea><br>
-        <button id="btn2" onclick="add()">ADD</button>   <button id="btn3">CANCEL</button>
-        </form>
-      </center></div>
-
-
-
-
-
-
-      
-      <button id="addbtn">+</button>
-      <script src="script.js"></script>
+  </div>
+  <button id="firstadd">+</button>
+  <div id="overlay"></div>
+  <div id="popup">
+    <h2>Add Book</h2>
+    <form>
+      <input id="bktitle" placeholder="Book Title"><br>
+      <input id="bkauthor" placeholder="Book Author"><br>
+      <textarea id="descript" placeholder="Book Short Description"></textarea>
+    </form>
+    <button id="secadd">ADD</button>
+    <button id="secdel">CANCEL</button>
+    <script src="script.js"></script>
+  </div>
 </body>
-
-
 </html>
